--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="container">
         <div class="header-content">
           <div class="logo">
-            <i class="fas fa-store"></i>
+            <!-- <i class="fas fa-store"></i> -->
             New Tech Innovation
           </div>
           <div class="menu-toggle" id="menuToggle">
@@ -31,7 +31,7 @@
                 <a href="#about"><i class="fas fa-info-circle"></i> About</a>
               </li>
               <li>
-                <a href="#contact"><i class="fas fa-envelope"></i> Contact</a>
+                <a href="https://wa.link/ew6o2h"><i class="fas fa-envelope"></i> Contact</a>
               </li>
             </ul>
           </nav>
@@ -86,19 +86,20 @@
             </p>
             <div class="social-links">
               <a href="#"><i class="fab fa-facebook-f"></i></a>
-              <a href="#"><i class="fab fa-twitter"></i></a>
+              <!-- <a href="#"><i class="fab fa-twitter"></i></a> -->
               <a href="#"><i class="fab fa-instagram"></i></a>
-              <a href="#"><i class="fab fa-linkedin-in"></i></a>
+              <!-- <a href="#"><i class="fab fa-linkedin-in"></i></a> -->
             </div>
           </div>
           <div class="footer-column">
             <h3>Quick Links</h3>
             <ul>
-              <li><a href="#">Home</a></li>
-              <li><a href="#products">Products</a></li>
-              <li><a href="#about">About Us</a></li>
-              <li><a href="#contact">Contact</a></li>
-              <li><a href="#">Privacy Policy</a></li>
+              <!-- <li><a href="#">Home</a></li> -->
+              <!-- <li><a href="#products">Products</a></li> -->
+              <!-- <li><a href="#about">About Us</a></li> -->
+              <li><a href="https://wa.link/ew6o2h">Contact us</a></li>
+
+              <!-- <li><a href="#">Privacy Policy</a></li> -->
             </ul>
           </div>
           <div class="footer-column">
@@ -109,7 +110,7 @@
               Near Gold Gym ,Vytila 682019
             </p>
             <p><i class="fas fa-phone"></i> +91 9895417033</p>
-            <p><i class="fas fa-envelope"></i> info@productbrochure.com</p>
+            <p><i class="fas fa-envelope"></i> newtechinnovation.org</p>
             <p><i class="fas fa-clock"></i> Mon-Fri: 9AM-6PM</p>
             <p><i class="fas fa-clock"></i> saturday 9AM - 5:30PM</p>
           </div>
@@ -127,7 +128,7 @@
           </div>
         </div>
         <div class="footer-bottom">
-          <p>&copy; 2023 Product Brochure. All rights reserved.</p>
+          <p>&copy; documentation </p>
         </div>
       </div>
     </footer>
