--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <h3>About Us</h3>
             <p>
               We are dedicated to providing high-quality services that enhance
-              your lifestyle. Our mission is to deliver excellence in every
+              your productivity. Our mission is to deliver excellence in every
               product we offer.
             </p>
             <div class="social-links">
