--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
               <!-- <li><a href="#">Home</a></li> -->
               <!-- <li><a href="#products">Products</a></li> -->
               <!-- <li><a href="#about">About Us</a></li> -->
-              <li><a href="https://wa.link/ew6o2h">Contact us</a></li>
+<p>connect with us on whatsapp</p>
+              <li><a href="https://wa.link/ew6o2h">Click Here</a></li>
 
               <!-- <li><a href="#">Privacy Policy</a></li> -->
             </ul>
